close #276 add HttpOnly and optional Secure flag for cookies